# riwer

./: Cargo.toml  README.md  resources.norg
src/: lib.rs  main.rs
src/graphic/: mod.rs  rectangle.rs  shader.wgsl  texture.rs
src/window/: mod.rs  xorg.rs
